replaced link to the dataset

--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -41,7 +41,7 @@
     "## Dataset\n",
     "Our training dataset was obtained from the Niek Sanders corpus, who has done an awesome job of **manually** labeling more than 5,000 tweets with 4 categories: Positive, Negative, Neutral, and Irrelevant. In general, you could use his script, [install.py](https://github.com/zfz/twitter_corpus.git), to fetch the corresponding Twitter text by tweet id. Because the script is playing nicely with Twitter's servers, it might take quite some time to download the data, so the dataset [full-corpus.csv](https://drive.google.com/file/d/1n3XFcUp8yoLf4BOj0rxEpTw1VCwyK1s-/view?usp=sharing) has been already pre-created for you by your hard-working instructor:). \n",
     "\n",
-    "We also preprocessed the dataset, leaving only 2 relevant columns: the text of a twit, and the sentiment class. The preprocessed dataset is in file [labeled_corpus.tsv](https://drive.google.com/file/d/1XPbZVvB9rCkn82-1qN7fnU1S5SD40Vai/view?usp=sharing), and the tweet text is separated from the class label using tab (‘\\t’). That is why the file extension is tsv - which means tab-separated values (similar to csv - comma-separated values). This is our training dataset, used to estimate the probabilities of words given a category. Download the dataset [labeled_corpus.tsv](https://drive.google.com/file/d/1XPbZVvB9rCkn82-1qN7fnU1S5SD40Vai/view?usp=sharing), and place it in the same directory wherte your notebook is.\n",
+    "We also preprocessed the dataset, leaving only 2 relevant columns: the text of a twit, and the sentiment class. The preprocessed dataset is in file [labeled_corpus.tsv](https://drive.google.com/file/d/1NXvKTuTO6oNjonKkDm2DGdN5fqj-2RE7/view?usp=drive_link), and the tweet text is separated from the class label using tab (‘\\t’). That is why the file extension is tsv - which means tab-separated values (similar to csv - comma-separated values). This is our training dataset, used to estimate the probabilities of words given a category. Download the dataset [labeled_corpus.tsv](https://drive.google.com/file/d/1NXvKTuTO6oNjonKkDm2DGdN5fqj-2RE7/view?usp=drive_link), and place it in the same directory where your notebook is.\n",
     "\n",
     "Let's open the dataset and look at the first five rows:"
    ]
@@ -79,7 +79,7 @@
    "id": "7dd44b83",
    "metadata": {},
    "source": [
-    "We see that some tweets are labeled as 'positive' and others as 'negative'. There are overall four different categories of documents (tweets) in this dataset. We will use the following set of categories. We can also make use of categories as numbers or as indexes in the array."
+    "We see that some tweets are labeled as 'positive' and others as 'negative'. There are overall four different categories of documents (tweets) in this dataset. Let's store these categories in a set. We can also make use of categories as numbers or as indexes in the array."
    ]
   },
   {
@@ -139,7 +139,7 @@
    "id": "f24d6601",
    "metadata": {},
    "source": [
-    "Here are also the most common abbreviations to be replaced with actual words."
+    "Here are also the most common abbreviations to be replaced with actual words:"
    ]
   },
   {
@@ -267,10 +267,10 @@
     "Based on all the information given above, read the dataset, clean each tweet, remove some prefixed words, and split the tweet into words using the function `split_tweet()` defined above.\n",
     "\n",
     "Then for each word from an obtained list generate the following counts: \n",
-    "- Number of tweets this word occured in category \"positive\"\n",
-    "- Number of tweets this word occured in category \"negative\"\n",
-    "- Number of tweets this word occured in category \"neutral\"\n",
-    "- Number of tweets this word occured in category \"irrelevant\"\n",
+    "- Number of tweets in category \"positive\" that contain this word  \n",
+    "- Number of tweets in category \"negative\" that contain this word  \n",
+    "- Number of tweets in category \"neutral\" that contain this word   \n",
+    "- Number of tweets in category \"irrelevant\" that contain this word   \n",
     "\n",
     "Also count the total number of tweets in each category and the overall total number of tweets.\n",
     "\n",
@@ -300,7 +300,7 @@
     "\n",
     "produce_counts()\n",
     "\n",
-    "##### DOuble-check that your counts are correct\n",
+    "##### Double-check that your counts are correct\n",
     "# total positives = 519\n",
     "print (\"total positives =\", total_entries[0])\n",
     "\n",
