--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -48,10 +48,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bc2f8a37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now all @Apple has to do is get swype on the iphone and it will be crack. Iphone that is\n",
+      "positive\n",
+      "\n",
+      "@Apple will be adding more carrier support to the iPhone 4S (just announced)\n",
+      "positive\n",
+      "\n",
+      "Hilarious @youtube video - guy does a duet with @apple 's Siri. Pretty much sums up the love affair! http://t.co/8ExbnQjY\n",
+      "positive\n",
+      "\n",
+      "Why is #Google advertising Adwords Express on #Bing? Hmmm, I know Ballmer is happy :-D. #Google, your already a monopoly.\n",
+      "negative\n",
+      "\n",
+      "@RIM you made it too easy for me to switch to @Apple iPhone. See ya!\n",
+      "positive\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "\n",
@@ -84,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f2a671d4",
    "metadata": {},
    "outputs": [],
@@ -107,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cb57548d",
    "metadata": {},
    "outputs": [],
@@ -135,6 +157,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b289b3cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(emo_repl)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f24d6601",
    "metadata": {},
@@ -144,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fd94829a",
    "metadata": {},
    "outputs": [],
@@ -174,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3c2eb85b",
    "metadata": {},
    "outputs": [],
@@ -194,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6c066e11",
    "metadata": {},
    "outputs": [],
@@ -236,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f4eb30c7",
    "metadata": {},
    "outputs": [],
@@ -279,26 +322,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "57960897",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def produce_counts():\n",
-    "   #TODO Your code goes here"
+    "def produce_counts(word_count_dict, total_entries, insert_file_name):\n",
+    "   #TODO Your code goes here\n",
+    "    csvfile = open(insert_file_name, \"r\", encoding=\"utf-8\")\n",
+    "    \n",
+    "    readCSV = csv.reader(csvfile, delimiter='\\t')\n",
+    "    \n",
+    "    for row in readCSV:\n",
+    "        line_arr = list(row)\n",
+    "\n",
+    "        tweet = line_arr[0]\n",
+    "        sentiment = line_arr[1] \n",
+    "        \n",
+    "        tweet = clean_tweet(tweet)\n",
+    "        words = split_tweet(tweet)\n",
+    "        \n",
+    "        for word in words:\n",
+    "            if word in word_count_dict:\n",
+    "                word_count_dict[word][4] += 1\n",
+    "\n",
+    "                if(sentiment == \"positive\"):\n",
+    "                    word_count_dict[word][0] += 1\n",
+    "                if(sentiment == \"negative\"):\n",
+    "                    word_count_dict[word][1] += 1\n",
+    "                if(sentiment == \"neutral\"):\n",
+    "                    word_count_dict[word][2] += 1\n",
+    "                if(sentiment == \"irrelevant\"):\n",
+    "                    word_count_dict[word][3] += 1\n",
+    "            else:\n",
+    "                word_count_dict[word] = [0, 0, 0, 0, 0]\n",
+    "                word_count_dict[word][4] += 1\n",
+    "\n",
+    "                if(sentiment == \"positive\"):\n",
+    "                    word_count_dict[word][0] += 1\n",
+    "                if(sentiment == \"negative\"):\n",
+    "                    word_count_dict[word][1] += 1\n",
+    "                if(sentiment == \"neutral\"):\n",
+    "                    word_count_dict[word][2] += 1\n",
+    "                if(sentiment == \"irrelevant\"):\n",
+    "                    word_count_dict[word][3] += 1\n",
+    "\n",
+    "        if(sentiment == \"positive\"):\n",
+    "            total_entries[0]+=1\n",
+    "\n",
+    "        if(sentiment == \"negative\"):\n",
+    "            total_entries[1]+=1\n",
+    "\n",
+    "        if(sentiment == \"neutral\"):\n",
+    "            total_entries[2]+=1\n",
+    "\n",
+    "        if(sentiment == \"irrelevant\"):\n",
+    "            total_entries[3]+=1\n",
+    "\n",
+    "        total_entries[4]+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "87d7971d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total positives = 519\n",
+      "total negatives = 572\n",
+      "total documents = 5107\n",
+      "[6, 8, 12, 0, 26]\n",
+      "[12, 6, 16, 0, 34]\n"
+     ]
+    }
+   ],
    "source": [
     "word_counts_dict = {} # \"word\": [positive, negative, neutral, irrelevant, total counts]\n",
     "total_entries = [0, 0, 0, 0, 0] #[positive, negative, neutral, irrelevant, total counts]\n",
     "\n",
-    "produce_counts()\n",
+    "produce_counts(word_counts_dict, total_entries, \"labeled_corpus.tsv\")\n",
     "\n",
     "##### Double-check that your counts are correct\n",
     "# total positives = 519\n",
@@ -348,13 +454,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b8e05703",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def probabilities():\n",
-    "     #TODO Your code goes here"
+    "def probabilities(total_entires, prior_probabilities, word_counts_dict, probabilities_dict):\n",
+    "     #TODO Your code goes here  \n",
+    "    \n",
+    "    prior_probabilities[0] = total_entries[0] / total_entries[-1]\n",
+    "    prior_probabilities[1] = total_entries[1] / total_entries[-1]\n",
+    "    prior_probabilities[2] = total_entries[2] / total_entries[-1]\n",
+    "    prior_probabilities[3] = total_entries[3] / total_entries[-1]\n",
+    "    \n",
+    "    for word in word_counts_dict:\n",
+    "        probabilities_dict[word] = [0, 0, 0, 0]\n",
+    "        probabilities_dict[word][0] = word_counts_dict[word][0] / total_entries[0]\n",
+    "        probabilities_dict[word][1] = word_counts_dict[word][1] / total_entries[1]\n",
+    "        probabilities_dict[word][2] = word_counts_dict[word][2] / total_entries[2]\n",
+    "        probabilities_dict[word][3] = word_counts_dict[word][3] / total_entries[3]\n",
+    "    "
    ]
   },
   {
@@ -367,15 +486,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5977f42e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P('positive') 0.10162522028588213\n",
+      "P('negative') 0.11200313295476796\n",
+      "P('neutral') 0.4558449187389857\n",
+      "P('irrelevant') 0.3305267280203642\n",
+      "[0.011560693641618497, 0.013986013986013986, 0.005154639175257732, 0.0]\n",
+      "[0.023121387283236993, 0.01048951048951049, 0.006872852233676976, 0.0]\n"
+     ]
+    }
+   ],
    "source": [
     "prior_probabilities = [0,0,0,0] #probabilities of 'positive', 'negative', 'neutral', 'irrelevant'\n",
     "probabilities_dict = {} #key: word, value array [positive, negative, neutral, irrelevant]\n",
     "\n",
-    "probabilities()\n",
+    "probabilities(total_entries, prior_probabilities, word_counts_dict, probabilities_dict)\n",
     "\n",
     "print(\"P('positive')\", prior_probabilities[0])     # 0.10162522028588213\n",
     "print(\"P('negative')\", prior_probabilities[1])     # 0.11200313295476796\n",
@@ -385,6 +517,28 @@
     "print(probabilities_dict['made'])   #[0.011560693641618497, 0.013986013986013986, 0.005154639175257732, 0.0]\n",
     "print(probabilities_dict['thank'])  #[0.023121387283236993, 0.01048951048951049, 0.006872852233676976, 0.0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "1007a751",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'function' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[115], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#['rt', 'rt', 'the', 'problem', 'is', 'these', 'wack', 'bitchz', 'think', 'they', 'bad', '', 'you', 'corny', 'niggaz', 'hyping', 'them', 'up', 'is', 'not', 'helping', 'the', '']\u001b[39;00m\n\u001b[0;32m      4\u001b[0m test \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 5\u001b[0m test \u001b[38;5;241m=\u001b[39m log(prior_probabilities[\u001b[38;5;241m3\u001b[39m]) \u001b[38;5;241m+\u001b[39m log(probabilities[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mthe\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m3\u001b[39m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'function' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -451,15 +605,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "92841f22",
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import * # for log\n",
     "\n",
-    "def classify():\n",
-    "     #TODO Your code goes here"
+    "def classify(insert_file_name, result):\n",
+    "     #TODO Your code goes here\n",
+    "    # countdown = 5\n",
+    "    # c_list = []\n",
+    "\n",
+    "    csvfile = open(insert_file_name, \"r\", encoding=\"utf-8\")\n",
+    "\n",
+    "    readCSV = csv.reader(csvfile, delimiter='\\t')\n",
+    "\n",
+    "    for row in readCSV:\n",
+    "        line_arr = list(row)\n",
+    "\n",
+    "        latitude = line_arr[0]\n",
+    "        longitude = line_arr[1]\n",
+    "        tweet = line_arr[2]\n",
+    "\n",
+    "        tweet = clean_tweet(tweet)\n",
+    "        words = split_tweet(tweet)\n",
+    "        \n",
+    "        # print(words)\n",
+    "\n",
+    "        count = 0\n",
+    "        best_c = 0\n",
+    "        best_log = 0\n",
+    "        words_log = 0\n",
+    "        \n",
+    "        while(count < 4):\n",
+    "            for word in words:\n",
+    "                if word in probabilities_dict:\n",
+    "                    if(probabilities_dict[word][count] != 0):\n",
+    "                        words_log = words_log + log(probabilities_dict[word][count])\n",
+    "                else:\n",
+    "                    words_log = words_log + log(prior_probabilities[count])\n",
+    "\n",
+    "            if(best_log == 0):\n",
+    "                best_log = log(prior_probabilities[count]) + words_log\n",
+    "                best_c = count\n",
+    "            else:\n",
+    "                if((log(prior_probabilities[count]) + words_log) > best_log):\n",
+    "                    best_log = log(prior_probabilities[count]) + words_log\n",
+    "                    best_c = count\n",
+    "\n",
+    "            # print(log(prior_probabilities[count]) + words_log)\n",
+    "\n",
+    "            words_log = 0\n",
+    "            count += 1\n",
+    "\n",
+    "        # c_list.append(best_c)\n",
+    "        result.append([latitude, longitude, best_c])\n",
+    "        # print(best_log)\n",
+    "        # print(best_c)\n",
+    "        # print()\n",
+    "\n",
+    "        # countdown-=1\n",
+    "        # if countdown==0: \n",
+    "           # break\n",
+    "    #print(c_list)\n",
+    "    #wfile = open('locations_classified.tsv', 'w', encoding=\"utf-8\")\n",
+    "    #for line in result:\n",
+    "        #wfile.write('\\t'.join(row) + '\\n')"
    ]
   },
   {
@@ -475,14 +687,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "05f03a7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['40.2', '-74.85', 3], ['40.2', '-74.85', 1], ['40.2', '-74.85', 0], ['40.2', '-74.85', 2], ['40.2', '-74.85', 3]]\n"
+     ]
+    }
+   ],
    "source": [
     "result = []\n",
-    "classify()    \n",
-    "print(result[:5])   "
+    "classify(\"geo_twits_squares.tsv\", result)    \n",
+    "print(result[:5])"
    ]
   },
   {
@@ -535,7 +755,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
+   "id": "d803d1e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n",
+      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n",
+      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n",
+      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "countdown = 4\n",
+    "rfile = open('locations_classified.tsv', 'r', encoding=\"utf-8\")\n",
+    "readCSV = csv.reader(rfile, delimiter='\\t')\n",
+    "for row in readCSV:\n",
+    "    line_arr = list(row)\n",
+    "    print(line_arr)\n",
+    "    countdown-=1\n",
+    "    if countdown==0: \n",
+    "        break\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "id": "79868cbd",
    "metadata": {},
    "outputs": [],
@@ -684,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
