--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "bc2f8a37",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2a671d4",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cb57548d",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b289b3cf",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "dict"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "fd94829a",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3c2eb85b",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6c066e11",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f4eb30c7",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "57960897",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "87d7971d",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "b8e05703",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "5977f42e",
    "metadata": {},
    "outputs": [
@@ -520,24 +520,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "1007a751",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'function' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[115], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#['rt', 'rt', 'the', 'problem', 'is', 'these', 'wack', 'bitchz', 'think', 'they', 'bad', '', 'you', 'corny', 'niggaz', 'hyping', 'them', 'up', 'is', 'not', 'helping', 'the', '']\u001b[39;00m\n\u001b[0;32m      4\u001b[0m test \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 5\u001b[0m test \u001b[38;5;241m=\u001b[39m log(prior_probabilities[\u001b[38;5;241m3\u001b[39m]) \u001b[38;5;241m+\u001b[39m log(probabilities[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mthe\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m3\u001b[39m])\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'function' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -605,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "id": "92841f22",
    "metadata": {},
    "outputs": [],
@@ -669,9 +657,9 @@
     "        # if countdown==0: \n",
     "           # break\n",
     "    #print(c_list)\n",
-    "    #wfile = open('locations_classified.tsv', 'w', encoding=\"utf-8\")\n",
-    "    #for line in result:\n",
-    "        #wfile.write('\\t'.join(row) + '\\n')"
+    "    wfile = open('locations_classified.tsv', 'w', encoding=\"utf-8\")\n",
+    "    for row in result:\n",
+    "        wfile.write('\\t'.join(map(str, row)) + '\\n')"
    ]
   },
   {
@@ -687,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "id": "05f03a7a",
    "metadata": {},
    "outputs": [
@@ -755,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 35,
    "id": "d803d1e6",
    "metadata": {},
    "outputs": [
@@ -763,36 +751,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n",
-      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n",
-      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n",
-      "['41.95', '-93.6', \"@user_ba70b959 hahaha that's love right there. where do we listen + purchase tracks from?\"]\n"
+      "['40.2', '-74.85', '3']\n",
+      "['40.2', '-74.85', '1']\n",
+      "['40.2', '-74.85', '0']\n",
+      "['40.2', '-74.85', '2']\n",
+      "{('40.2', '-74.85'): [1, 1, 4], ('40.3', '-84.85'): [1, 2, 4]}\n",
+      "0.0\n",
+      "-0.25\n"
      ]
     }
    ],
    "source": [
-    "'''\n",
+    "test_dict1 = {}\n",
     "countdown = 4\n",
     "rfile = open('locations_classified.tsv', 'r', encoding=\"utf-8\")\n",
     "readCSV = csv.reader(rfile, delimiter='\\t')\n",
     "for row in readCSV:\n",
     "    line_arr = list(row)\n",
+    "    latitude = line_arr[0]\n",
+    "    longitude = line_arr[1]\n",
+    "    sentiment = line_arr[2]\n",
     "    print(line_arr)\n",
+    "    \n",
+    "    if (latitude, longitude) not in test_dict1:\n",
+    "        test_dict1[(latitude, longitude)] = [0, 0, 0]\n",
+    "    test_dict1[(latitude, longitude)][2] += 1\n",
+    "    if sentiment == '0':\n",
+    "        test_dict1[(latitude, longitude)][0] += 1\n",
+    "    if sentiment == '1':\n",
+    "        test_dict1[(latitude, longitude)][1] += 1\n",
+    "\n",
     "    countdown-=1\n",
     "    if countdown==0: \n",
     "        break\n",
-    "'''"
+    "\n",
+    "test_dict1[('40.3', '-84.85')] = [1, 2, 4]\n",
+    "print(test_dict1)\n",
+    "for (latitude, longitude), count in test_dict1.items():\n",
+    "    positivity = (count[0] - count[1]) / count[2]\n",
+    "    print(positivity)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 40,
    "id": "79868cbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def positivity_score():\n",
-    "     #TODO Your code goes here"
+    "     #TODO Your code goes here\n",
+    "    score_dict = {}\n",
+    "    positivity_list = []\n",
+    "\n",
+    "    rfile = open('locations_classified.tsv', 'r', encoding=\"utf-8\")\n",
+    "    readCSV = csv.reader(rfile, delimiter='\\t')\n",
+    "\n",
+    "    for row in readCSV:\n",
+    "        line_arr = list(row)\n",
+    "        latitude = line_arr[0]\n",
+    "        longitude = line_arr[1]\n",
+    "        sentiment = line_arr[2]\n",
+    "        if (latitude, longitude) not in score_dict:\n",
+    "            score_dict[(latitude, longitude)] = [0, 0, 0]\n",
+    "        score_dict[(latitude, longitude)][2] += 1\n",
+    "        if sentiment == '0':\n",
+    "            score_dict[(latitude, longitude)][0] += 1\n",
+    "        if sentiment == '1':\n",
+    "            score_dict[(latitude, longitude)][1] += 1\n",
+    "        \n",
+    "        for (latitude, longitude), count in score_dict.items():\n",
+    "            positivity = (count[0] - count[1]) / count[2]\n",
+    "            positivity = (positivity + 1) / 2\n",
+    "            positivity_list.append((latitude, longitude, positivity))\n",
+    "            \n",
+    "    with open('positivity_score.tsv', 'w', newline='', encoding='utf-8') as out_file:\n",
+    "        tsv_writer = csv.writer(out_file, delimiter='\\t')\n",
+    "        for score in positivity_list:\n",
+    "            tsv_writer.writerow(score)\n",
+    "\n",
+    "    return positivity_scores[:5]\n",
+    "    "
    ]
   },
   {
